@@ -1,3 +1,3 @@
-## usage
+# usage
 
-参考: https://github.com/ysicing/kind
+参考: [ysicing/kind](https://github.com/ysicing/kind)
